smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/mixins-with-member-override-1.flattened.smithy
$version: "2.0"

namespace com.amazon.example

structure Valid {
    @private
    @required
    a: String
    b: String
}

